correction header align , active tag ..

--- a/src/ali.scss
+++ b/src/ali.scss
@@ -2537,8 +2537,9 @@ ul li {
 		color: #637282;
 		font-family: 'HKGrotesk';
 		a{
-			color: #345581 !important;
+			color: #337ab7 !important;
 			font-weight: 800;
+			text-decoration: underline;
 			font-family: 'HKGrotesk';
 		}
 	}
@@ -2739,6 +2740,9 @@ ul li {
 					color: #fff !important;
 	
 					}
+					.pull-right-container{
+						width: 100%;
+					}
 					
 				}
 						span{
@@ -2769,6 +2773,12 @@ ul li {
 				font-size: 16px;
 				color: #88898a;
 				text-decoration: none;
+				padding-right: 16px;
+				display: flex;
+				align-items: center;
+				.pull-right-container{
+					width: 100%;
+				}
 				&:active{
 				color: #fff !important;
 					
@@ -2781,9 +2791,18 @@ ul li {
 			background: rgba($color: #345581, $alpha: 1);
 				color: #fff !important;
 				border-radius: 4px;
+				background: #345581;
+				color: #fff !important;
+				border-radius: 4px;
+				padding-right: 16px;
+				display: flex;
+				align-items: center;
 			i{
 				color: #fff !important;
 
+				}
+				.pull-right-container{
+					width: 100%;
 				}
 			a{
 					
@@ -2803,6 +2822,8 @@ ul li {
 					position: absolute;
 					top: 4px;
 					left: 3px;
+					top: 50%;
+					transform: translate(0,-50%);
 				}
 				
 			}
@@ -3196,6 +3217,9 @@ img{
 .MuiSnackbarContent-message{
 	font-size: 14px !important;
 }
-  
+
+.playStoreDiv{
+	display: none !important;
+}
   
   
