--- a/src/sass/_custom.scss
+++ b/src/sass/_custom.scss
@@ -251,10 +251,17 @@ h1.heading {font-size: calc(1.6rem + 0.9vw); font-weight: bold; margin-bottom: 4
 	.navbar {background-color: $white !important; 
 		// box-shadow: 0px 4px 4px rgba($black, 0.1);
 	.container-xl{
-		justify-content: space-evenly;
+		justify-content: space-between;
+		.navbar-brand{
+			margin-right: 0 !important;
+		}
+		.navbar-profile{
+			margin-right: 0 !important;
+		}
 	}
 	}
 	.navbar-main {
+		margin-top: 0 !important;
 	@media (min-width: 768px){
 		width: 100%;
 		justify-content: center;
@@ -283,7 +290,8 @@ h1.heading {font-size: calc(1.6rem + 0.9vw); font-weight: bold; margin-bottom: 4
 		.badge {
 			// position: absolute; width: 18px; height: 18px; border-radius: 50%; display: flex; align-items: center; justify-content: center; top: 10px; right: 0px;
 			position: absolute;
-			width: 18px;
+			min-width: 18px;
+			max-width: 30px;
 			height: 18px;
 			border-radius: 50%;
 			display: flex;
